--- a/content/blog/2018-11-03-ewenthemes.Rmd
+++ b/content/blog/2018-11-03-ewenthemes.Rmd
@@ -46,9 +46,9 @@ ggplot(mtcars, aes(mpg, wt)) +
        subtitle="A plot that is only useful for demonstration purposes",
        caption="Brought to you by the letter 'g'") + 
   # apply theme
-  theme_ewen_ws()
+  theme_ewen_rs()
 ```
 
-Following Bob's lead, I chose to ship [Work Sans](https://github.com/weiweihuanghuang/Work-Sans) inside the software and include functions to install it on your system with help from `extrafont`. Font handling is surprisingly tricksy in R and this seems to be the best option right now.
+Following Bob's lead, I chose to ship the fonts ([Recursive Sans](https://www.recursive.design/) and  [Work Sans](https://github.com/weiweihuanghuang/Work-Sans)) *inside* the software and include functions to install it on your system with help from `extrafont`. Font handling is surprisingly tricksy in R and this seems to be the best option right now.
 
-The current core themes, `theme_ewen` (Arial Narrow-based) and `theme_ewen_ws` (Work Sans-based) draw heavily from `hrbrthemes`' `theme_ipsum` with some modifications - the chart grid runs on major horizontal lines only, and a thick x-axis line is used by default. Some text properties, notably size and colour, are also modified for readability on mobile devices. Take a look at the [commit history](https://github.com/ewenme/ewenthemes/commits/master) of `ewenthemes` to see, in detail, what changed from the original package.
+The current core theme, `theme_ewen`, draws heavily from `hrbrthemes`' `theme_ipsum` with some modifications - the chart grid runs on major horizontal lines only, and a thick x-axis line is used by default. Some text properties, notably size and colour, are also modified for readability on mobile devices. Take a look at the [commit history](https://github.com/ewenme/ewenthemes/commits/master) of `ewenthemes` to see, in detail, what changed from the original package.
