--- a/content/blog/2017-10-11-meet-dumb-hardwax.Rmd
+++ b/content/blog/2017-10-11-meet-dumb-hardwax.Rmd
@@ -2,7 +2,7 @@
 title: "Meet Dumb Hardwax"
 description: "The story of my first tweetbot, complete with forays into Azure and Markov Chains."
 date: "2017-10-11"
-tags: ["r", "bots", "text-gen"]
+tags: ["r", "music", "text-gen"]
 keywords: ["r", "twitterbot", "tweetbot", "bot", "markov chain", "text gen"]
 slug: meet-dumb-hardwax
 draft: no
