--- a/content/blog/2018-08-27-building-open-transfer-data.Rmd
+++ b/content/blog/2018-08-27-building-open-transfer-data.Rmd
@@ -3,7 +3,7 @@ title: "Building open football player transfer data"
 description: "Collating player transfers to and from football clubs in major European leagues."
 date: '2018-08-27'
 slug: building-open-football-player-transfer-data
-tags: ["football", "open-data"]
+tags: ["football", "open-data", "r"]
 keywords: ["football", "transfers", "open data", "r", "web scraping"]
 image: https://github.com/ewenme/transfers/raw/master/figures/chelsea-transfers-web.png
 draft: no
