--- a/content/blog/2018-09-17-in-search-of-the-mixtape-goat.Rmd
+++ b/content/blog/2018-09-17-in-search-of-the-mixtape-goat.Rmd
@@ -3,7 +3,7 @@ title: "In search of the mixtape GOAT"
 description: "A data-driven tribute to the best of the mixtape era glow-ups."
 date: '2018-09-17'
 slug: in-search-of-the-mixtape-goat
-tags: ["mixtapes", "d3"]
+tags: ["music", "d3"]
 keywords: ["datpiff", "d3", "lil wayne", "mixtape", "bubble chart"]
 image: "https://github.com/rbind/ewenme/raw/master/static/img/2018-09-17-in-search-of-the-mixtape-goat/datpiff-bubble.png"
 draft: no
