--- a/content/blog/2020-10-23-making-a-ghibli-wallpaper-carousel-for-mac-os.Rmd
+++ b/content/blog/2020-10-23-making-a-ghibli-wallpaper-carousel-for-mac-os.Rmd
@@ -9,7 +9,7 @@ image: "https://raw.githubusercontent.com/rbind/ewenme/master/static/blog/2020-1
 draft: no
 ---
 
-Studio Ghibli [have dropped almost 1k movie stills into the public domain](http://www.ghibli.jp/info/013344/) (and counting) over the last few months. I turned this into a rotating wallpaper for my Mac, and thought I'd share the (tiny) process.
+Studio Ghibli [have dropped almost 1k movie stills into the public domain](http://www.ghibli.jp/info/013381/) (and counting) over the last few months. I turned this into a rotating desktop wallpaper for my Mac, and thought I'd share the (tiny) process.
 
 First, make (AKA `mkdir`) a folder in which to store the images via [a terminal session](https://www.youtube.com/watch?v=QROX039ckO8), then navigate to that directory (with `cd`). You can edit the command below to do this, dropping in a suitable file path replacement for you.
 
@@ -24,7 +24,7 @@ Before starting the d/l, you will need [wget](https://www.gnu.org/software/wget/
 brew install wget
 ```
 
-This next part comes courtesy of a comment under a [HN post following the news](https://news.ycombinator.com/item?id=24564775). I hadn't seen the curly braces `{}` trick before, which is a neat way to expand a numeric series in the shell. Anyway, this step will grab the whole image drop (as of 20th November, 2020) and will take a little while.
+This next part comes courtesy of a comment under a [HN post following the news](https://news.ycombinator.com/item?id=24564775). I hadn't seen the curly braces `{}` trick before, which is a neat way to expand a numeric series in the shell. Anyway, this step will grab the whole image drop (as of 20th November, 2020) and will probably take an hour or so.
 
 ```{bash eval=FALSE}
 wget --random-wait --timestamping http://www.ghibli.jp/gallery/{ged,chihiro,karigurashi,ponyo,kokurikozaka,marnie,kaguyahime,kazetachinu,howl,baron,ghiblies,yamada,mononoke,mimi,tanuki,umi,porco,majo,totoro}{001..050}.jpg
