--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -1,10 +1,9 @@
 ---
-title: listening, 2020
-description: 'music I was thankful for in 2020.'
-date: '2021-01-02'
+title: "listening, 2020"
+description: "music I was thankful for in 2020."
+date: "2021-01-02"
 slug: listening-2020
-tags:
-  - listening
+tags: ["listening"]
 ---
 
 ## :goat: :goat: :goat: :goat: :goat:
