--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -31,6 +31,8 @@ tags: ["listening"]
 
 ## honorable mentions
 
+Charlie Bones – [DO!! YOU!!!](https://www.nts.live/shows/the-do-you-breakfast-show), 
+Steve McQueen – [Lovers Rock](https://www.youtube.com/watch?v=tTB0Pl25Rx8&list=PLKdFW01A1NFmC9JfsfREliCBsbMEtFqgA),  
 John FM – [American Spirit](https://johnfm.bandcamp.com/album/american-spirit),
 TeeZandos – [Highlander](https://www.youtube.com/watch?v=CvwNQVZlQv4),
 WIZE – [the edits. SERIES 2](https://wizetheproducer.bandcamp.com/album/the-edits-series-2),
