--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -4,7 +4,8 @@ description: "music I was thankful for in 2020."
 date: "2021-01-02"
 slug: listening-2020
 tags: ["listening"]
-image: "https://ewen.io/posts/2021-01-02-listening-2020_files/porco001.jpg"
+images: 
+- porco001.jpg
 ---
 
 ![](/posts/2021-01-02-listening-2020_files/porco001.jpg)
