fix twitter img

--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -5,7 +5,7 @@ date: "2021-01-02"
 slug: listening-2020
 tags: ["listening"]
 images: 
-- porco001.jpg
+- /posts/2021-01-02-listening-2020_files/porco001.jpg
 ---
 
 ![](/posts/2021-01-02-listening-2020_files/porco001.jpg)
