more image hacking

--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -4,7 +4,7 @@ description: "music I was thankful for in 2020."
 date: "2021-01-02"
 slug: listening-2020
 tags: ["listening"]
-images: 
+image: 
 - /posts/2021-01-02-listening-2020_files/porco001.jpg
 ---
 
