--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -103,7 +103,7 @@ Parris – [Polychrome Swim](https://thetrilogytapes.bandcamp.com/album/polychro
 Xyla – [Ways](https://xylasf.bandcamp.com/album/ways),
 Pretty Sneaky – [Pretty Sneaky](https://prettysneaky.bandcamp.com/album/pretty-sneaky),
 BEARCAT – [SPELL](https://bearcat666.bandcamp.com/album/spell),
-Unknown T – [Rise Above Hate](https://www.youtube.com/watch?v=IFOkNeZUcqE&list=PLf1hrOwqId80X8s5jY48x-MKTXqXo3m_I)
+Unknown T – [Rise Above Hate](https://www.youtube.com/watch?v=IFOkNeZUcqE&list=PLf1hrOwqId80X8s5jY48x-MKTXqXo3m_I),
 Sully x Karborn – [The Dancer](https://sullyuk.bandcamp.com/album/sully-x-karborn-the-dancer),
 Will Hofbauer – [Where Did All The Hay Go?](https://thirdplacerecords.bandcamp.com/album/will-hofbauer-where-did-all-the-hay-go),
 DJ EARL – [BASS + FUNK & SOUL](https://djearlteklife.bandcamp.com/album/mtxlt190-bass-funk-soul),
