--- a/content/posts/2021-01-02-listening-2020.md
+++ b/content/posts/2021-01-02-listening-2020.md
@@ -36,11 +36,11 @@ images:
 ## honorable mentions
 
 Charlie Bones – [DO!! YOU!!!](https://www.nts.live/shows/the-do-you-breakfast-show), 
-Steve McQueen – [Lovers Rock](https://www.youtube.com/watch?v=tTB0Pl25Rx8&list=PLKdFW01A1NFmC9JfsfREliCBsbMEtFqgA),  
+Steve McQueen – [Lovers Rock](https://www.youtube.com/watch?v=tTB0Pl25Rx8&list=PLKdFW01A1NFmC9JfsfREliCBsbMEtFqgA),
 John FM – [American Spirit](https://johnfm.bandcamp.com/album/american-spirit),
 TeeZandos – [Highlander](https://www.youtube.com/watch?v=CvwNQVZlQv4),
 WIZE – [the edits. SERIES 2](https://wizetheproducer.bandcamp.com/album/the-edits-series-2),
-Nas – [King's Disease](https://www.youtube.com/watch?v=6mjNY53ORuA&list=PLxA687tYuMWjL3r09WBJJ7sGou3MQbcLa)
+Nas – [King's Disease](https://www.youtube.com/watch?v=6mjNY53ORuA&list=PLxA687tYuMWjL3r09WBJJ7sGou3MQbcLa),
 Kareem Ali – [Solar](https://kareemali19.bandcamp.com/album/solar),
 DJ Lostboi & Torus – [The Flash](https://queeste.bandcamp.com/album/the-flash),
 LSDXOXO – Codename Cottonmouth (Mercury's Rainbow Mix),
