--- a/content/posts/2017-11-06-linear-programming-fantasy.Rmd
+++ b/content/posts/2017-11-06-linear-programming-fantasy.Rmd
@@ -5,7 +5,7 @@ date: "2017-11-06"
 tags: ["r", "fpl"]
 keywords: ["r", "fpl", "fantasy premier league", "linear optimisation", "linear programming"]
 slug: my-linear-programming-fantasy
-draft: no
+draft: true
 ---
 
 ```{r setup, include=FALSE}
